# nought

./: .env  .gitignore  Cargo.toml  README.md
crates/nought/: Cargo.toml
crates/nought-cli/: Cargo.toml
crates/nought-cli/src/: commands_config.rs  main.rs
crates/nought-cli/src/commands/: create.rs  mod.rs  search.rs
crates/nought-cli/src/errors/: common_errors.rs  create_errors.rs  mod.rs
crates/nought/src/: lib.rs
crates/nought/src/errors/: common_errors.rs  create_errors.rs  mod.rs
crates/nought/src/models/: mod.rs  search_models.rs
crates/nought/src/networks/: create_api.rs  mod.rs  search_apis.rs
crates/nought/src/proto/: config_proto.rs  mod.rs
crates/nought/src/protos/: mod.rs  pkg_build.rs  platforms.rs
