[workspace]
members = ["crates/*"]
default-members = ["crates/nought-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
rust-version = "1.71.0"
description = "A modern package manager."
authors = ["EvanLuo42"]
edition = "2021"

[workspace.dependencies]
nought = { path = "crates/nought" }
nought-cli = { path = "crates/nought-cli" }
toml = "0.8.8"
serde = { version = "1.0.193", features = ["derive"] }
dotenvy = "0.15"
reqwest = { version = "0.12.2", features = ["json"] }
tokio = { version = "1", features = ["full"] }