[package]
name = "nought-cli"
version = "0.1.0"
edition = "2021"
description = "Official CLI for the modern package manager Nought."
authors = ["EvanLuo42"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }