[package]
name = "nought-cli"
version = { workspace = true }
edition = { workspace = true }
description = "Official CLI for the modern package manager Nought."
authors = { workspace = true }

[[bin]]
name = "nought"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nought = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.4.11", features = ["derive", "cargo"] }
colored = "2.0.4"