[package]
name = "nought"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
futures-util = "0.3.29"
indicatif = "0.17.8"
colored = "2.1.0"